--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="mdc-top-app-bar">
   <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <img class="lazyload" alt="" src="../assets/logo.png" width="36px" height="36px">
+        <img class="lazyload" alt="" src="../assets/logo.webp" width="36px" height="36px">
           <!-- <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button"></button> -->
           <span class="mdc-top-app-bar__title">AFM - Victory Outreach Center</span>
       </section>
@@ -26,10 +26,26 @@
       <div class="col-sm">
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
-            <h5 class="card-title" style="font-size: large;">The first Easter<b>[Filesize: 42.5MB]</b></h5>
+            <h5 class="card-title" style="font-size: large;">Easter Sunday message</h5>
+            <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please join us in celebrating Easter Sunday with Rev Moss Ntlha as he reads from the book of Acts. <b>[Filesize: 31.4MB]</b></p>
             <div class="d-flex justify-content-between align-items-center">
               <figure class="btn-group">
-                <video style="max-width: 100%;" class="video-properties" preload="none" poster="../assets/videocast1poster.png" controls>
+                <video style="max-width: 100%;" class="video-properties" preload="none" poster="../assets/videocast2poster.webp" controls>
+                  <source src="../assets/videocast2.mp4" type="video/mp4">
+                  Your browser does not support the video element.
+                </video>
+              </figure>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card mb-4 shadow-sm">
+          <div class="card-body" style="min-height: 500px;">
+            <h5 class="card-title" style="font-size: large;">The first Easter <b>[Filesize: 42.5MB]</b></h5>
+            <div class="d-flex justify-content-between align-items-center">
+              <figure class="btn-group">
+                <video style="max-width: 100%;" class="video-properties" preload="none" poster="../assets/videocast1poster.webp" controls>
                   <source src="../assets/videocast1.mp4" type="video/mp4">
                   Your browser does not support the video element.
                 </video>
@@ -42,7 +58,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
             <h5 class="card-title" style="font-size: large;">The mocking of Jesus [Audio]</h5>
-            <img class="lazyload" alt="" mat-card-image src="../assets/easter.jpg" style="width: 100%; height: 300px;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/easter.webp" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 10th of April 2020 (Easter). You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 11.7MB]</b> </p>
             <br><br>
             <div class="d-flex justify-content-between align-items-center">
@@ -69,7 +85,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" style="min-height: 500px;">
             <h5 class="card-title" style="font-size: large;">Through the valley [Audio]</h5>
-            <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.jpg" style="width: 100%; height: 300px;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast4.webp" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below the message for this week, 5th of April 2020. You can also download the message and send to friends, family and fellow believers and non-belivers. <b>[Filesize: 19.9MB]</b> </p>
             <br/><br>
             <div class="d-flex justify-content-between align-items-center">
@@ -96,7 +112,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" >
             <h5 class="card-title" style="font-size: large;">The Lord is with you [Audio]</h5>
-            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 300px;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.webp" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Please find below
               the message for this week, 29th of March 2020. You can also download the message and send to friends,
               family and fellow believers and non-belivers. <b>[Filesize: 5.5MB]</b> </p>
@@ -125,7 +141,7 @@
         <div class="card mb-4 shadow-sm">
           <div class="card-body" >
             <h5 class="card-title" style="font-size: large;">Welcome</h5>
-            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.jpg" style="width: 100%; height: 300px;" />
+            <img class="lazyload" alt="" mat-card-image src="../assets/podcast1.webp" style="width: 100%; height: 300px;" />
             <p class="card-text pt-2 font-weight-normal" style="min-height: 80px; max-height: 80px;">Welcome to the VOC
               Podcast page. Please listen to a welcome message from our pastor below.<b>[Filesize: 75.6KB]</b></p>
               <br>
