--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,6 +31,19 @@
       <p class="lead text-muted">To our neighbors with an open heart and open hands</p>
     </div>
   </section>
+  <div class="alert alert-primary">
+    Appeal to offering to assist our brethren in need:
+    Deposit offering, any amount into church main account and Reference: Name & surname or initial and surname with OHF
+    at the end short for Open Heart Fund.<br />
+    Bank: <b>ABSA</b><br />
+    Account number: <b>100144964</b><br />
+    Account type: <b>Current (Cheque/Bond) Account</b><br />
+    Reference: <b>Name + Surname + OHF</b><br />
+  </div>
+  <div class="alert alert-primary">
+    We have launched a WhatsApp group. If you would like to receive the word via WhatsApp, clicks <a
+      href="https://chat.whatsapp.com/JQ0gWgDtlQ93ghwKfuKsKw">here 💬</a> to join the group.
+  </div>
 
   <router-outlet></router-outlet>
 </div>
@@ -44,21 +57,13 @@
         </div>
       </div>
       <div class="col">
-        <!-- <nav aria-label="...">
+        <nav aria-label="Page navigation example">
           <ul class="pagination">
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item active">
-              <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#">Next</a>
-            </li>
+            <li class="page-item"><a class="page-link" [routerLink]="['/march']">March 2020</a></li>
+            <li class="page-item"><a class="page-link" [routerLink]="['/april']">April 2020</a></li>
+            <li class="page-item"><a class="page-link" [routerLink]="['/may']">May 2020</a></li>
           </ul>
-        </nav> -->
+        </nav>
       </div>
       <div class="col">
         <p class="float-right">
