--- a/src/app/may/may.component.html
+++ b/src/app/may/may.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-xs col-md col-lg">
-        <app-audio [audioDate]="'31 May 2020'" [audioTitle]="'Pentacost Sunday message'"
+        <app-audio [audioDate]="'31 May 2020'" [audioTitle]="'Pentecost Sunday message'"
             [audioArt]="'../assets/lean.jpg'" [audioSrc]="'../assets/podcast20200531.mp4'" [audioSize]="'18.6MB'"
-            [audioDescription]="'Please join us as Pastor Kekana speaks to us about Pentacost Sunday'">
+            [audioDescription]="'Please join us as Pastor Kekana speaks to us about Pentecost Sunday'">
         </app-audio>
     </div>
 
