--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="mdc-top-app-bar__row">
     <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
       <img class="lazyload" alt="" src="../assets/logo.webp" width="36px" height="36px">
-      <a [routerLink]="['/home']" style="color: white;">
+      <a [routerLink]="['/']" style="color: white;">
         <span class="mdc-top-app-bar__title short-text">AFM - VOC</span>
         <span class="mdc-top-app-bar__title full-text">AFM - Victory Outreach Center</span>
       </a>
@@ -62,6 +62,7 @@
             <li class="page-item"><a class="page-link" [routerLink]="['/march']">March 2020</a></li>
             <li class="page-item"><a class="page-link" [routerLink]="['/april']">April 2020</a></li>
             <li class="page-item"><a class="page-link" [routerLink]="['/may']">May 2020</a></li>
+            <li class="page-item"><a class="page-link" [routerLink]="['/june']">June 2020</a></li>
           </ul>
         </nav>
       </div>
